video section added

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -276,6 +276,9 @@
                     <li class="css-item"><a class="css-link" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="About" asp-action="Index">About</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Gallery" asp-action="Index">Gallery</a></li>
+                    <li class="css-item">
+                        <a class="css-link" asp-controller="VideoManagement" asp-action="Index">Video Management</a>
+                    </li>
                     <li class="css-item"><a class="css-link" asp-controller="Help" asp-action="Request">Help</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Events" asp-action="Index">Events</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Profile" asp-action="Index">Profile</a></li>
